@@ -1,6 +1,14 @@
 2011-07-28 Philipp Klaus Krause <pkk AT spth.de>
 
 	* device/include/setjmp.h,
+	  device/lib/z80/Makefile.in,
+	  device/lib/z80/setjmp.s,
+	  support/regression/tests/setjmp.c:
+	  setjmp() and longjmp() for the Z80.
+
+2011-07-28 Philipp Klaus Krause <pkk AT spth.de>
+
+	* device/include/setjmp.h,
 	  device/lib/_setjmp.c,
 	  support/regression/tests/setjmp.c:
 	  Fixed some setjmp() / longjmp() bugs.
